--- a/index.html
+++ b/index.html
@@ -60,6 +60,16 @@
                     </p>
                     <a href="#">Visit Website</a>
                 </li>
+                <li>
+                    <figure>
+                        <img src="images/skrewball-whiskey-wDtDLSE986U-unsplash.jpg" alt="coffee" id="img">
+                        <figcaption><h3>Share with friends</h3></figcaption>
+                    </figure>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus labore doloremque sint explicabo, optio illum impedit nobis ipsam earum voluptas?
+                    </p>
+                    <a href="#">Visit Website</a>
+                </li>
                 
             </ul>
         </section>
